--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.4.0",
     "framer-motion": "^10.16.4",
     "next": "13.5.4",
+    "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18"
   },
