--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.5",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
     "typescript": "^5"
